[tool.poetry]
name = "testapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
SQLAlchemy = "^2.0.22"
celery = "^5.3.4"
redis = "^5.0.1"

[tool.poetry.group.dev.dependencies]
alembic = "^1.12.0"
flower = "^2.0.1"
flake8 = "^6.1.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# this is dont works. Envierment creates in " ~/.cache/pypoetry/virtualenvs" anyway
#[virtualenvs]
#path = "~/.virtualenvs/fastapivenv"

